TS-828 Various memory leaks and uninitialized values.

Author: William Bardwell
Review (and minor formatting edits): leif

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1133639 13f79535-47bb-0310-9956-ffa450edef68